Sun Mar 31 22:08:00 2002  Si Mong Park  <spark@ociweb.com>

        * ChangeLog:
          Fixed incorrect path for FaCE related files on prior change log items.

Sat Mar 30 08:58:57 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Asynch_Acceptor.cpp: (handle_accept): Removed a stray ACE_DEBUG() call.
	  Thanks to Edan Ayal <edanayal@yahoo.com> for reporting this.

Sun Mar 31 01:18:00 2002  Si Mong Park  <spark@ociweb.com>

        * apps/FaCE/FaCE_OS.h:
        * apps/FaCE/FaCE.cpp:
        * apps/FaCE/Main.cpp:
          Added "// FUZZ: disable check_for_tchar" as the code is only and
          specifically for the WinCE.  Thanks to Nanbor Wang for help.

        * apps/CE_ARGV.H:
        * apps/CE_ARGV.CPP:
          Minor lower/upper case change in the include statement.

Sat Mar 30 22:19:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS.h:
          Removed FaCE_MAIN definition originally added during WinCE port
          and moved to FaCE_OS.h in the FaCE package since it is FaCE
          specific macro.

        * apps/FaCE/Face_OS.h:
          Contains FaCE_MAIN macro definition to set entry point on WinCE.

        * apps/FaCE/ReadMe.txt:
          Updated installation part for FacE_OS.h.

Fri Mar 29 17:35:39 2002  Steve Huston  <shuston@riverace.com>

        * ace/Proactor.h: Doxygen-ize some comments; correct the
          close() comment (no I/O completion port is known at this level).

Fri Mar 29 13:40:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS.h:
          Minor fix for WinCE IDC name.

        * apps/FaCE/ACE.ico:
        * apps/FaCE/ACE_Racer.bmp:
        * apps/FaCE/CE_ARGV.CPP
        * apps/FaCE/CE_ARGV.H
        * apps/FaCE/CE_Screen_Output.cpp:
        * apps/FaCE/CE_Screen_Output.h:
        * apps/FaCE/FaCE.cpp:
        * apps/FaCE/FaCE.h:
        * apps/FaCE/FACE.ico:
        * apps/FaCE/FaCE.rc:
        * apps/FaCE/FaCE.vcp:
        * apps/FaCE/FaCE.vcw:
        * apps/FaCE/FaCENOACE.vcp: